[gd_scene load_steps=13 format=3 uid="uid://bqynrqap1msjv"]

[ext_resource type="Texture2D" uid="uid://0apc8yrbn8f3" path="res://assets/sprites/player.png" id="1"]
[ext_resource type="Script" path="res://scripts/entities/Player.gd" id="2"]
[ext_resource type="AudioStream" uid="uid://bwqhvjjl3wxv5" path="res://assets/sounds/jump.wav" id="3"]
[ext_resource type="AudioStream" uid="uid://cjf5q0ivac3vl" path="res://assets/sounds/slide.wav" id="4"]
[ext_resource type="AudioStream" uid="uid://blo8lfnf0ag54" path="res://assets/sounds/death.wav" id="5"]
[ext_resource type="PackedScene" path="res://scenes/entities/Trail.tscn" id="6"]
[ext_resource type="Texture2D" uid="uid://c84dbldatjrf1" path="res://assets/sprites/player_canDash.png" id="7"]
[ext_resource type="AudioStream" uid="uid://cep06guel3534" path="res://assets/sounds/dash.wav" id="8"]

[sub_resource type="SpriteFrames" id="7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("7")
}],
"loop": false,
"name": &"Dash_Ready",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1")
}],
"loop": false,
"name": &"Normal",
"speed": 5.0
}]

[sub_resource type="Gradient" id="8"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="RectangleShape2D" id="9"]
size = Vector2(6, 14)

[sub_resource type="CapsuleShape2D" id="10"]
radius = 3.75
height = 15.5

[node name="Player" type="CharacterBody2D" groups=["Player"]]
z_index = 1
script = ExtResource("2")

[node name="Jump_Buffer_Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Coyote_Time_Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Right_RayCast1" type="RayCast2D" parent="."]
target_position = Vector2(6, 0)

[node name="Right_RayCast2" type="RayCast2D" parent="."]
position = Vector2(0, 6)
target_position = Vector2(6, 0)

[node name="Right_RayCast3" type="RayCast2D" parent="."]
position = Vector2(0, -6)
target_position = Vector2(6, 0)

[node name="Left_RayCast1" type="RayCast2D" parent="."]
target_position = Vector2(-6, 0)

[node name="Left_RayCast2" type="RayCast2D" parent="."]
position = Vector2(0, 6)
target_position = Vector2(-6, 0)

[node name="Left_RayCast3" type="RayCast2D" parent="."]
position = Vector2(0, -6)
target_position = Vector2(-6, 0)

[node name="JumpSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3")
bus = &"SFX"

[node name="DashSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8")
bus = &"SFX"

[node name="Jump_Sound_Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="SlideSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4")
volume_db = -24.0
bus = &"SFX"

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5")
bus = &"SFX"

[node name="Trail" parent="." instance=ExtResource("6")]

[node name="DashReloadTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("7")
animation = &"Normal"

[node name="ParticlesDeath" type="CPUParticles2D" parent="."]
emitting = false
amount = 25
lifetime = 0.5
one_shot = true
explosiveness = 0.5
randomness = 1.0
lifetime_randomness = 0.5
emission_shape = 3
emission_rect_extents = Vector2(2, 5)
direction = Vector2(1, 3)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 60.0
initial_velocity_max = 80.0
scale_amount_min = 2.0
scale_amount_max = 3.0
color = Color(0.678431, 0.533333, 0.776471, 1)
color_ramp = SubResource("8")

[node name="InteractionArea" type="Area2D" parent="."]
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
shape = SubResource("9")

[node name="Dash_Duration_Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="RaycastCeiling1" type="RayCast2D" parent="."]
position = Vector2(0, -7)
target_position = Vector2(0, -2)

[node name="RaycastCeiling2" type="RayCast2D" parent="."]
position = Vector2(2, -7)
target_position = Vector2(0, -2)

[node name="RaycastCeiling3" type="RayCast2D" parent="."]
position = Vector2(-2, -7)
target_position = Vector2(0, -2)

[node name="RaycastGround1" type="RayCast2D" parent="."]
position = Vector2(0, 7)
target_position = Vector2(0, 2.5)

[node name="RaycastGround2" type="RayCast2D" parent="."]
position = Vector2(-2, 7)
target_position = Vector2(0, 2.5)

[node name="RaycastGround3" type="RayCast2D" parent="."]
position = Vector2(2, 7)
target_position = Vector2(0, 2.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("10")

[connection signal="timeout" from="Jump_Buffer_Timer" to="." method="_on_Jump_Buffer_Timer_timeout"]
[connection signal="timeout" from="Coyote_Time_Timer" to="." method="_on_Coyote_Time_Timer_timeout"]
[connection signal="timeout" from="DashReloadTimer" to="." method="_on_DashReloadTimer_timeout"]
[connection signal="body_entered" from="InteractionArea" to="." method="_on_interaction_area_body_entered"]
[connection signal="timeout" from="Dash_Duration_Timer" to="." method="_on_Dash_Duration_Timer_timeout"]
